<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBanner"
        style="@style/sticky_banner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/goBackButton"
            style="@style/banner_button"
            android:text="@string/sign_out"
            android:onClick="signOut"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <!-- On Click, navigate the user back to the Login screen -->

        <TextView
            android:id="@+id/goalWeightLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/goal_weight_text_view"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/goalWeightDisplay"/>

        <TextView
            android:id="@+id/goalWeightDisplay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/goalWeightLabel"
            app:layout_constraintEnd_toEndOf="@id/goalWeightLabel"
            app:layout_constraintTop_toBottomOf="@id/goalWeightLabel"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/notificationButton"
            style="@style/banner_button"
            android:src="@drawable/notification_bell"
            android:onClick="toggleNotifications"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/notification_bell_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomBanner"
        style="@style/sticky_banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/addWeightButton"
            style="@style/navButton"
            android:layout_width="wrap_content"
            android:text="@string/add_weight"
            android:onClick="addWeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="24dp"/>

        <Button
            android:id="@+id/setGoalButton"
            style="@style/navButton"
            android:layout_width="wrap_content"
            android:text="@string/set_goal"
            android:onClick="setGoal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="24dp"/>
        <!-- On Click, navigate the user to activity_set_goal.xml -->

    </androidx.constraintlayout.widget.ConstraintLayout >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/data_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topBanner"
        app:layout_constraintBottom_toTopOf="@id/bottomBanner"
        android:layout_marginHorizontal="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>